13. apr. 2017
-------------

- Rewrite readme

5. jan. 2017
------------

- Minor changes

15. oct. 2016
-------------

- Upload initial version