@@ -1,3 +1,10 @@
+28. may. 2017
+-------------
+
+- Bug fixed that caused false False result
+- Minimal output modifies
+- Minimal formatting changes
+
 13. apr. 2017
 -------------
 
